--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,15 @@
 version: 2
 updates:
-# Maintain dependencies for GitHub Actions
-- package-ecosystem: "github-actions"
-  directory: "/"
-  schedule:
-    interval: "weekly"
-    day: "saturday"
-    time: "06:00"
-    timezone: "America/Toronto"
-  open-pull-requests-limit: 99
-  commit-message:
-    prefix: "build: "
-  assignees:
-    - "jidicula"
+  # Maintain dependencies for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "saturday"
+      time: "06:00"
+      timezone: "America/Toronto"
+    open-pull-requests-limit: 99
+    commit-message:
+      prefix: "build: "
+    assignees:
+      - "DeveloperPaul123"
